--- a/solucioneslibro/index.html
+++ b/solucioneslibro/index.html
@@ -4,22 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Soluciones L'Amaldi.blu</title>
+    <title>TAREA DE FISICA EJERCICIO 6</title>
 </head>
 <body>
-    <ul id="listaEjercicios">
-        
-    </ul>
+    <h1>Ley de Coulomb - ANDRES PULIDO</h1>
+    <h2>Essercizio 6 dei problemi generali</h2>
+    <p>Una sbarretta isolante di lunghezza 2a porta ai suoi estremi due cariche positive puntiformi ed uguali Q ed é posta nel vuoto. Come é mostrato nella figura, altre due cariche negative di valore -Q, sono posizionate in modo da formare due triangoli equilateri con un lato in comune</p>
+    <p> --> Mostra che la forza totale agente su alcuna delle cariche negative é nulla.</p>
+    <img id="i1"  src="./img/ejercicio.jpg" alt="i1" width="20%">
+    <p>RISPOSTA: Essendo due triangoli equilateri e l'intensita delle due cariche é la stessa sia le positive e le negative, ma il verso della carica adiacente é opposta allora il sistema si poú dire che ciascuna delle cariche negative e anche le positive sono nulle perche si cancellano giá che in un punto qualsiasi la carica soffre due forze atrattive ai lati ed in fronte una che la repelle. :)  </p>
 
-    <script>
-        for (i = 1; i < 20; i++)
-        {
-            let content = document.getElementById("listaEjercicios").innerHTML;
-            content = content + "<a href='./ej"+i+".html'><li>Capítulo "+i+"</li></a>";
-            document.getElementById("listaEjercicios").innerHTML = content;
-        }
-        
-
-    </script>
 </body>
 </html>
